--- a/IsTakip.Business/IsTakip.Business.csproj
+++ b/IsTakip.Business/IsTakip.Business.csproj
@@ -5,15 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="NewFolder\**" />
-    <Compile Remove="ValidationRules\FluentValidation\**" />
-    <EmbeddedResource Remove="NewFolder\**" />
-    <EmbeddedResource Remove="ValidationRules\FluentValidation\**" />
-    <None Remove="NewFolder\**" />
-    <None Remove="ValidationRules\FluentValidation\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="EPPlus" Version="5.5.5" />
     <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.1" />
@@ -21,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IsTakip.DataAccess\IsTakip.DataAccess.csproj" />
     <ProjectReference Include="..\IsTakip.DTO\IsTakip.DTO.csproj" />
   </ItemGroup>
 
