--- a/IsTakip.DTO/IsTakip.DTO.csproj
+++ b/IsTakip.DTO/IsTakip.DTO.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IsTakip.Entities\IsTakip.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
