--- a/IsTakip.Web/IsTakip.Web.csproj
+++ b/IsTakip.Web/IsTakip.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IsTakip.Business\IsTakip.Business.csproj" />
+    <ProjectReference Include="..\IsTakip.Core\IsTakip.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +20,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.12" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
-    <PackageReference Include="toastr" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
